device apis
